--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: ci
 on:
   push:
     branches:
+      - master
       - main
 jobs:
   deploy:
@@ -10,5 +11,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.x
       - run: pip install mkdocs-material
+      - run: mkdocs gh-deploy --force
